manifests/canary-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-canary
spec:
  selector:
    app: nodejs-app
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
