manifests/stable-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-stable
spec:
  selector:
    app: nodejs-app
    version: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
